# PyOB

./: .gitignore  Dockerfile  LICENSE  PR_SUMMARY.md  README.md  ROADMAP.md  action.yml  autoreviewer.py  build_pyinstaller_multiOS.py  check.sh  core_utils.py  entrance.py  prompts_and_memory.py  pyob.icns  pyob_launcher.py  pyproject.toml
.github/workflows/: pyob_service.yml  verify.yml
docs/: DOCUMENTATION.md  index.html
src/pyob/: apply_xml_mixins.py  autoreviewer.py  cascade_queue_handler.py  core_utils.py  core_utils_mixin.py  dashboard_html.py  dashboard_server.py  dashboard_utils.js  data_parser.py  entrance.py  entrance_mixins.py  evolutionMixin.py  evolution_mixins.py  feature_mixins.py  get_valid_edit.py  models.py  prompts.py  prompts_and_memory.py  pyob_code_parser.py  pyob_dashboard.py  pyob_launcher.py  reviewer_mixins.bak  reviewer_mixins.py  scanner_mixins.py  stats_updater.py  targeted_reviewer.py  xml_mixin.py
tests/: test_entry_detection.py  test_feature_mixins.py  test_reviewer_mixins.py  test_scanner.py  test_xml_parser.py
